[package]
name = "redis-copy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
structopt = "0.3.23"
